--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.23
+alembic==1.14.0
+flask==3.1.0
+flask_migrate==4.0.7
+flask_sqlalchemy==3.1.1
+SQLAlchemy==2.0.36
