--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-alembic==1.14.0
-flask==3.1.0
-flask_migrate==4.0.7
-flask_sqlalchemy==3.1.1
-SQLAlchemy==2.0.36
+alembic
+Flask
+Flask_Migrate
+Flask_SocketIO
+flask_sqlalchemy
+Requests
+SQLAlchemy
