add api connection and automatically restock and restock after user's done

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic
-Flask
-Flask_Migrate
-Flask_SocketIO
+flask
+flask_migrate
+flask_socketIO
 flask_sqlalchemy
+openni
 Requests
 SQLAlchemy
+ultralytics
